css/main.css
@-moz-viewport { width: device-width; scale: 1; }
@-ms-viewport { width: device-width; scale: 1; }
@-o-viewport { width: device-width; scale: 1; }
@-webkit-viewport { width: device-width; scale: 1; }
@viewport { width: device-width; scale: 1; }

html {
  box-sizing: border-box;
  -moz-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  text-size-adjust: 100%;
  height: 100%;
}

*, *::before, *::after {
  box-sizing: inherit;
}

body {
  margin: 0;
}

main {
  padding-top: 100px;
  margin: 0;
  color: #000033;
  position: relative;
  height: 100%;
}

.nav-logo {
  width: 160px;
  margin-bottom: 0;
}

nav {
  position: fixed;
  width: 100%;
  height: 100px;
  padding: 1.5em;
  background-color: #fff;
  z-index: 10000;
  overflow: hidden;
}

nav ol {
  padding: 0;
  width: 320px;
  text-align: center;
  margin-top: 0.5em;
  margin-left: -2em;
}

nav li {
  list-style-type: none;
  display: inline-block;
  padding: 0em 1.1em 0em 1.1em;
  font-size: .8em;
  font-family: 'Open Sans', sans-serif;
}

nav a {
  text-decoration: none;
  color: #000033;
}

nav a:hover {
  color: orange;
}

::selection {
  color: #fff;
  background: orange;
}

.banner {
  position: relative;
  width: 100%;
  overflow: hidden;

}

h1 {
  font-family: 'Open Sans', sans-serif;
  font-size: 1.5em;
  margin-bottom: .5em;
  font-weight: 300;
}

.banner-text {
  position: absolute;
  top: 30%;
  transform: translateY(-30%);
  margin-top: 0;
  width: 100%;
  padding-left: 1.5em;
  padding-right: 1.5em;
  color: #fff;
  animation: fade 1.5s linear;
}

.history {
  opacity: 0;
  transition: all 1.5s linear;
}

.projects {
  opacity: 0;
  transition: all 1.5s linear;
}

.contact {
  opacity: 0;
  transition: all 1.5s linear;
}

.animate {
  opacity: 1;

}

@keyframes fade {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

#projects {
  animation: fade 2s linear;
}

#contact {
  animation: fade 2s linear;
}

.banner-text p {
  font-family: 'Open Sans', sans-serif;
  font-weight: 300;
  font-size: .8em;
  line-height: 1.7;
}

footer {
  bottom: 0;
  width: 100%;
  padding: 1em 1em 0em 1em;
  background-color: #fff;
}

footer img {
  width: 120px;
  display: inline;
  float: left;
}

footer p {
  font-size: 0.6em;
  display: inline;
  position: absolute;
  right: 0;
  bottom: 0;
  font-weight: 300;
  line-height: 1.5;
  font-family: 'Open Sans', sans-serif;

}

footer div {
  position: relative;
  height: 2em;
}

.button:hover {
  border-bottom: 2px solid orange;
}

main {
  width: 100%;

}

.banner-img {
  height: calc(100vh - 100px);
}

.sky {
  height: calc(100vh - 100px);
  width: 160%;
}

.section {
  font-family: 'Cormorant Garamond', serif;
  padding-bottom: 0em;
  position: relative;
  padding-top: 6em;
}

.margin {
  margin-left: 1.5em;
  margin-right: 1.5em;
}

h2 {
  font-family: 'Open Sans', sans-serif;
  font-weight: 300;
  font-size: 2em;
  margin-top: .5em;
  margin-bottom: .5em;
}

.section p {
  line-height: 1.7;
  font-weight: 500;
  margin-bottom: 1em;
}

.orange {
  color: orange;
}

dl li {
  list-style-type: none;
}

dl dt {
  font-family: 'Open Sans', sans-serif;
  font-weight: 200;
  font-size: 1em;
  margin-bottom: .5em;
}

dl dd {
  font-family: 'Cormorant Garamond', serif;
  margin: 0;
  margin-bottom: 2em;
  font-weight: 500;
  line-height: 1.5;
}

.contact {
  margin-bottom: 5.2em;

}

.button-img {
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
  width: 70px;
}

.button-container {
  margin-top: 2em;
  position: relative;
}

.line {
  border-bottom: 1px solid #000;
  width: 5em;
  left: 50%;
  transform: translateX(-50%);
  bottom: 0;
}

.columns {
  column-count: 1;
  column-gap: 2em;
  margin: 0;
}

@media only screen and (min-width: 30em) {

.button-container {
  margin-top: 1em;
}

@media only screen and (min-width: 32em) {

  .nav-logo {
    display: inline;
  }
  .nav img {
    width: 160px;
  }

  nav ol {
    display: inline;
    position: absolute;
    top: 1em;
    right: -.5em;
  }

  nav {
    height: 70px;
  }

  .banner-text p {
    max-width: 30em;
    display: inline;
  }

  main {
    padding-top: 70px;
  }

  .banner-img {
    height: calc(100vh - 70px);
  }

  .sky {
    height: calc(100vh - 70px);
  }

  .banner-text {
    max-width: 40em;
    top: 15%;
    left: 50%;
    transform: translateX(-50%);
  }

  .margin {
    margin-left: 3em;
    margin-right: 3em;
  }

}

@media only screen and (min-width: 43em) {

  h1 {
    font-size: 2em;
    line-height: 1.2;
  }

  .columns {
    column-count: 2;
  }

  .margin {
    margin-left: 6em;
    margin-right: 6em;
  }

}

@media only screen and (min-width: 60em) {

  h1 {
    font-size: 3.3em;
  }

  .banner-text p {
    font-size: 1em;
  }

  .section {
    padding-top: 10em;
  }

}


@media only screen and (min-width: 73em) {

  .button-container {
    margin-top: 2.5em;
}

  .sky {
    width: 120%;
    height: auto;
  }

  h1 {
    font-size: 4em;
    margin-top: .5em;
  }

  .banner-text {
    max-width: 50em;
  }

  .margin {
    margin-left: 16em;
    margin-right: 16em;
  }

}


@media only screen and (min-width: 84em) {

.columns {
  column-count: 3;
}

.section {
  padding-top: 8em;
  height: calc(100vh - 70px);
}

.contact {
  padding-top: 8em;
  height: calc(100vh - 140px);
}

}


@media only screen and (min-width: 100em) {

  .margin {
    margin-left: 20em;
    margin-right: 20em;
  }

}

